# network-interface-manager

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
docs/: ADMIN_AND_AUTOSTART.md  CRASH_FIX.md  CROSS_PLATFORM_SUPPORT.md  DATABASE_PATH.md  DNS_TASK_IMPLEMENTATION.md  DOCUMENTATION_STRUCTURE.md  PANIC_PROTECTION.md  PERSISTENCE_IMPROVEMENTS.md  README.md  TRAY_FUNCTIONALITY.md  UAC_ELEVATION.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: tasks.db
src-tauri/src/: db.rs  dns_task.rs  lib.rs  main.rs  network_info.rs
