[package]
name = "network-interface-manager"
version = "0.1.1"
description = "a network interface manager panel"
authors = ["lhstack"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "network_interface_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
lazy_static = "1.4"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
ipconfig = "*"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "securitybaseapi", "shellapi"] }
is_elevated = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

